# LasagnaDB

./: .gitignore  DEVELOPMENT.md  Makefile  README.md  go.mod  ingest.sh  integration_test.sh  main.go
index/: index.go
processing/: README.md  pyproject.toml  segment_by_vad.py  split.py
storage/: storage.go
viewer/: package-lock.json  package.json  test_ancestry.cjs
viewer/dist-electron/: main.js  preload.mjs
viewer/electron/: main.ts  preload.ts  storage.ts
viewer/src/: App.css  App.tsx  WaveformPlayer.tsx  vite-env.d.ts
