[project]
name = "processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "librosa>=0.11.0",
    "numba>=0.60.0",
    "numpy<2.0",
    "packaging>=25.0",
    "soundfile>=0.13.1",
    "torch==2.5.1",
    "torchaudio==2.5.1",
]
